[tool.poetry]
name = "muta"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@cookpad.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
python-twitter = "^3.5"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.4"
ipython = "^7.11.1"
pytest = "^5.3.2"
flake8 = "^3.7.9"
rope = "^0.16.0"
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
